# RFDesign

./: setup.cfg
rfdesign/hallucination/: hallucinate.py  loss.py  optimization.py
rfdesign/hallucination/models/rf_Nov05_2021/: Attention_module.py  Embeddings.py  InitStrGenerator.py  RoseTTAFoldModel.py
rfdesign/hallucination/util/: contigs.py  parsers.py  trFold.py
rfdesign/inpainting/: contigs.py  inpaint.py  parsers.py
rfdesign/inpainting/model/: Attention_module.py  Embeddings.py  RoseTTAFoldModel.py  Track_module.py  data_loader.py  mask_generator.py
