[metadata]
name = rfdesign
version = attr: proteopt.__version__
author = Baker Lab, minor tweaks by Tim O'Donnell
author_email = timodonnell@gmail.com
description = RFDesign python package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/timodonnell/RFDesign
project_urls =
    Bug Tracker = https://github.com/timodonnell/RFDesign/issues
classifiers =
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.4
install_requires =
    numpy  # Not a complete list for now
    torch
